--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 2015,
-        "sourceType":"module"
+        "sourceType": "module"
     },
     "rules": {
         "indent": [
@@ -19,7 +19,9 @@
         "quotes": [
             "error",
             "single",
-            {"allowTemplateLiterals": true}
+            {
+                "allowTemplateLiterals": true
+            }
         ],
         "semi": [
             "error",
@@ -28,5 +30,8 @@
         "no-console": [
             "off"
         ]
+    },
+    "globals": {
+        "Handlebars": true
     }
 }
