--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "license": "ISC",
     "dependencies": {
         "flickity": "^2.2.1",
+        "flickity-fade": "^1.0.0",
         "json-server": "^0.16.1"
     },
     "devDependencies": {
